@@ -1,0 +1,8 @@
+#! /bin/bash -x
+libtoolize && \
+aclocal && \
+autoheader && \
+autoconf && \
+automake --add-missing && \
+cd libcontain && sh bootstrap
+
